<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ActividadFiltrar">


        <Button
            android:id="@+id/button_until"
            android:layout_width="117dp"
            android:layout_height="47dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="32dp"
            android:text="@string/button_until"
            android:textSize="10dp"
            app:backgroundTint="#018786"
            app:layout_constraintBottom_toTopOf="@+id/view2"
            app:layout_constraintStart_toEndOf="@+id/button_from" />

        <Button
            android:id="@+id/button_from"
            android:layout_width="117dp"
            android:layout_height="47dp"
            android:layout_marginTop="20dp"
            android:text="@string/button_from"
            android:textSize="10dp"
            app:backgroundTint="#018786"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button_apply"
            android:layout_width="196dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:text="@string/button_apply"
            app:backgroundTint="#018786"
            app:layout_constraintEnd_toStartOf="@+id/button_restart"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxPayPlan" />

        <Button
            android:id="@+id/button_restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/restart_filters"
            android:textColor="#9F9C9C"
            app:layout_constraintBaseline_toBaselineOf="@+id/button_apply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_apply" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="80dp"
            android:text="@string/text_view_until"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/button_until"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="76dp"
            android:text="@string/text_view_from"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/textView5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/textView3" />


        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="84dp"
            android:text="@string/ammount"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="251dp"
            android:layout_height="45dp"
            android:layout_marginStart="4dp"
            android:text="@string/filter_invoice"
            android:textColor="@color/black"
            android:textSize="27sp"
            app:layout_constraintBottom_toTopOf="@+id/button_until"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.142" />

        <TextView

            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="16dp"
            android:text="@string/issue_date"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/guideline" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/status"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/view" />


        <TextView
            android:id="@+id/slider_count"
            android:layout_width="45dp"
            android:layout_height="37dp"
            android:text="@string/slider_ammount"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.405" />

        <TextView
            android:id="@+id/slider_min_valor"
            android:layout_width="45dp"
            android:layout_height="37dp"
            android:text="@string/slider_ammount"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.089"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.436" />

        <TextView
            android:id="@+id/slider_max_valor"
            android:layout_width="45dp"
            android:layout_height="37dp"
            android:text="@string/slider_ammount"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.436" />

        <SeekBar
            android:id="@+id/slider_ammount"
            android:layout_width="360dp"
            android:layout_height="20dp"
            android:max="100"
            android:min="0"
            android:progress="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">


        </LinearLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="378dp"
            android:layout_height="2dp"
            android:layout_marginTop="32dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_from" />

        <View
            android:id="@+id/view"
            android:layout_width="378dp"
            android:layout_height="2dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/slider_ammount" />

        <CheckBox
            android:id="@+id/checkBoxCancel"
            android:layout_width="172dp"
            android:layout_height="34dp"
            android:text="@string/cancel"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/checkBoxFixedPayment"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxPaid" />

        <CheckBox
            android:id="@+id/checkBoxPendingPayment"
            android:layout_width="171dp"
            android:layout_height="39dp"
            android:text="@string/pending_payment"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/checkBoxPayPlan"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxFixedPayment" />

        <CheckBox
            android:id="@+id/checkBoxPayPlan"
            android:layout_width="172dp"
            android:layout_height="37dp"
            android:text="@string/payment_plan"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/button_apply"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxPendingPayment" />

        <CheckBox
            android:id="@+id/checkBoxFixedPayment"
            android:layout_width="172dp"
            android:layout_height="38dp"
            android:text="@string/fixed_fee"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/checkBoxPendingPayment"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxCancel" />

        <CheckBox
            android:id="@+id/checkBoxPaid"
            android:layout_width="172dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:text="Pagada"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/checkBoxCancel"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>